# GlassBox

./: DecisionTree.py  LinearModel.py  NBClassifier.py  Predictor.py  README.md  RandomForest.py  autofit.py  main.py  pipeline.py  pyproject.toml  test_knn.py  test_lg.py  test_lgr.py  test_lib.ipynb  test_nb.py
GLASSBOX/: Estimator.py  test_dtr.py  test_eda.py  test_metrics.py
GLASSBOX/transformers/: EDA.py  Scalers.py  Transfomer.py  encoderTest.py
examples/: compare_sklearn.py  run_agent_scenario.py  run_autofit_demo.py
glassbox_automl_amisouhaymmo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ironclaw/: DEPLOY.md  __init__.py  chat_sim.py  mcp_server.py  tools.py
metrics/: __init__.py  metric.py
mini_scikit_learn/: AdaBoost.py  DecisionTree.py  KnnEstimator.py  LinearModel.py  LogisticRegression.py  ModelEnsembler.py  SVM.py  test_ada.py  test_cv.py  test_dt.py  test_rf.py  test_stacking.py  test_voting.py
mini_scikit_learn/model_selection/: GridSearch.py  RandomSearch.py
mini_scikit_learn/transformers/: Encoders.py  Imputers.py
mini_scikit_learn/utils/: __init__.py  cross_validation.py  train_test_split.py
model_selection/: GridSearch.py  RandomSearch.py  __init__.py
models/: DecisionTree.py  Estimator.py  KnnEstimator.py  LinearModel.py  LogisticRegression.py  NBClassifier.py  Predictor.py  RandomForest.py  __init__.py
tests/: encoderTest.py  test_autofit.py  test_cv.py  test_dt.py  test_dtr.py  test_eda.py  test_ironclaw.py  test_knn.py  test_lg.py  test_lgr.py  test_metrics.py  test_nb.py  test_pipeline.py  test_requirements.py  test_rf.py
transformers/: EDA.py  Encoders.py  Imputers.py  Scalers.py  Transfomer.py  __init__.py  encoderTest.py
utils/: Kfolds.py  __init__.py  cross_validation.py  train_test_split.py
