[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glassbox-automl-amisouhaymmo"
version = "1.0.0"
description = "White-box AutoML library - interpretable machine learning from scratch"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Amine Benali", email = "aminebenali0708@gmail.com" },
]
keywords = [
    "machine-learning", "automl", "explainability",
    "decision-tree", "random-forest", "naive-bayes",
    "knn", "logistic-regression", "white-box",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "scikit-learn>=1.2",
    "pandas>=1.3",
]

[project.scripts]
glassbox-mcp = "glassbox.agent.mcp_server:main"
glassbox-mcp-http = "glassbox.agent.mcp_server:main_http"
glassbox-chat-sim = "glassbox.agent.chat_sim:main"

[project.urls]
Homepage = "https://github.com/aminebenali0708/GlassBox"
Repository = "https://github.com/aminebenali0708/GlassBox"
Issues = "https://github.com/aminebenali0708/GlassBox/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "ironclaw*", "transformers*", "metrics*", "model_selection*", "utils*"]

[tool.setuptools.package-data]
"*" = ["*.py"]
